# ClearBias

./: .gitattributes  .gitignore  README.md  TODO  copy_experiments.txt  environment.yml  id_ed25519  id_ed25519.pub  main.py  optuna_studies.db  pyproject.toml  requirements.txt  synthetic_experiments_optuna.db  test.py  test10.py  test2.py  test3.py  test4.py  test5.py  test6.py  testaequitas.py
aequitas/: main.py
aequitas_algo/: algo.py  analysis.ipynb  example.py  example_dg.py  experiment_results.db  main.py  main1.ipynb  main1.py
aequitas_algo/ClearBias/aequitas_algo/: example.py  example_dg.py  main.py
bayesian_optimization/: main.py
bias_scan/: main.py
biasscan/: MDSS.py  main.py  mdss_detector.py
data_generator/: main.py  main2.py  main3.py  main_old2.py  replicate_adult_dataset (3).ipynb  replicate_adult_dataset.ipynb  tests.py  utils.py  visualization-2 (1).ipynb  visualization.ipynb  visualization.py
data_generator/ClearBias/data_generator/: main.py  utils.py
data_generator/old/: cluster_visualization.py  replicate_adult_dataset.ipynb
experiments/: Employee.csv  analyse_exp4.ipynb  analyse_exp4_cate.ipynb  analyse_exp4_diff_all_exp.ipynb  analyse_exp4_diff_found.ipynb  analysis.ipynb  experiement1.py  experiment2.py  experiment4.py  experiment5.py  experiment_aequitas.py  experiment_results.db  experiments3.py  main1.ipynb
experiments/analyzing_methods/adf/: analysis1.ipynb  discrete_attribute_challenges.py
experiments/analyzing_methods/aequitas/: analysis1.ipynb
experiments/analyzing_methods/global/: global.ipynb  (+1 more)
experiments/baseline_exp/: adf.ipynb  adf2.ipynb  exp2.py  experiment_synth_data.py  implementation_comparaison.ipynb  test.py
experiments/old/: Employee.csv  analyse_exp4.ipynb  analyse_exp4_cate.ipynb  analyse_exp4_clustering.ipynb  analyse_exp4_clustering2.ipynb  analyse_exp4_diff_all_exp.ipynb  analyse_exp4_diff_found.ipynb  analysis.ipynb  analysis_experiment4.py  compare_dd_for_real_and_synthetic_data.ipynb  experiement1.py  experiment2.py  experiment4.py  experiment5.py  experiment_aequitas.py  experiments3.py  main1.ipynb
experiments/optimizing_hyperparameters_for_known_datasets/: optimization.py  results.ipynb
experiments/refind_disriminatiory_groups/: results.ipynb  results_adf.ipynb  results_aequitas.ipynb  results_expga.ipynb  results_sg.ipynb
experiments/reproduce_paper/: exp.db  experiment.py  implementation_comparaison.ipynb  reference_exp.py  result.ipynb
experiments/synthetic_data_visualization/: result.ipynb  result_with_new_gen_method.ipynb  result_with_new_gen_method.py
experiments/synthetic_dataset_experiemnts2/: main.py  main_optuna.py
experiments/synthetic_dataset_experiments2/: analysis.py  analysis_outline.txt  analyze_correlations.py  analyze_efficiency.py  analyze_group_attributes_correlation.py  analyze_optuna_correlations.py  article_analysis.py  db_utils.py  main.py  main_optuna.py  utils.py
experiments/synthetic_datasets_experiments/: analysis.py  fairness_testing.py  fairness_testing_with_new_data.py  report.py  result.ipynb  result2.ipynb  result3.ipynb
experiments/synthetic_datasets_experiments_old/: fairness_testing.py  fairness_testing_with_new_data.py  report.py  result.ipynb  result2.ipynb  result3.ipynb
gurobi_licence/: gurobi.lic
journal/2025-04-25/: file1.ipynb
methods/: all_card_prompt.txt  classification.txt  utils.py
methods/adf/: main.py  main1.py  test.py  test1.py  utils_tf.py
methods/aequitas/: algo.py  algo2.py  algo3.py  algo4.py  test.py
methods/aequitas2/: aequitas_fully_direct.py  config.py  loss_funcs.py  test.py  utils.py
methods/aequitas3/: Aequitas_Fully_Directed.py  Aequitas_Fully_Directed_Sklearn.py  Aequitas_Random.py  Aequitas_Random_Sklearn.py  Aequitas_Semi_Directed.py  Aequitas_Semi_Directed_Sklearn.py  config.py  utils.py
methods/aequitas_algo/: algo.py  example_dg.py  main.py  main1.py  main2.py
methods/biasscan/: MDSS.py  ScoringFunction.py  algo.py  dual_mdss.py  main.py  mdss.py  mdss_detector.py  test.py
methods/exp_ga/: algo.py  algo2.py  config.py  expga.py  genetic_algorithm.py  test.py
methods/group/fair_naive_bayes/pattern_finder/: pf_wrapper.cpp  pyproject.toml  setup.py
methods/ml_check/: algo.py  assert2logic.py  assume2logic.py  function_fairness.py  ml_check.py  pruning.py  test.py  tree2logic.py  util.py
methods/optimization/: analysis.py  fairness_testing.py  hyperparameter_prediction.py  optimization.py  optimizations.db
methods/sg/: main.py  main1.py  test.py
research/: search_space.ipynb
uncertainty_quantification/: main.py  test.py
(+216 files in other folders)
