[project]
name = "clearbias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aif360>=0.6.1",
    "boto>=2.49.0",
    "doubleml>=0.9.3",
    "hdbscan>=0.8.40",
    "lime>=0.2.0.1",
    "mapie>=0.9.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "parsimonious>=0.10.0",
    "patsy>=1.0.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "ucimlrepo>=0.0.7",
    "z3-solver>=4.14.0.0",
    "sdv>=1.18.0",
    "notebook>=7.3.2",
    "jupyterlab>=4.3.5",
    "ipython==8.33.0",
    "plotly==5.24.1",
    "scikit-image==0.25.2",
    "optuna>=4.3.0",
    "ipython-extensions>=0.2",
    "scikit-learn-intelex>=2025.5.0",
    "sliceline>=0.2.18",
    "sqlalchemy>=2.0.41",
    "numpy>=1.26.4",
    "gurobipy>=12.0.2",
    "rpy2>=3.6.1",
    "ete3>=3.1.3",
    "six>=1.17.0",
    "prettytable>=3.16.0",
    "pydot>=4.0.1",
    "imbalanced-learn>=0.13.0",
    "pysat>=3.2.2",
    "pgmpy>=1.0.0",
    "feature-engine>=1.8.3",
    "python-sat>=1.8.dev17",
    "gpkit>=1.1.1",
    "mlxtend>=0.23.4",
]
