[project]
name = "clearbias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aif360>=0.6.1",
    "boto>=2.49.0",
    "doubleml>=0.9.3",
    "hdbscan>=0.8.40",
    "lime>=0.2.0.1",
    "mapie>=0.9.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "parsimonious>=0.10.0",
    "patsy>=1.0.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "ucimlrepo>=0.0.7",
    "z3-solver>=4.14.0.0",
    "sdv>=1.18.0",
    "notebook>=7.3.2",
    "jupyterlab>=4.3.5",
    "ipython==8.33.0",
    "plotly==5.24.1",
    "scikit-image==0.25.2",
    "optuna>=4.3.0",
    "ipython-extensions>=0.2",
    "sliceline>=0.2.18",
    "sqlalchemy>=2.0.41",
    "numpy>=1.26.4",
    "ete3>=3.1.3",
    "six>=1.17.0",
    "prettytable>=3.16.0",
    "pydot>=4.0.1",
    "imbalanced-learn>=0.13.0",
    "pysat>=3.2.2",
    # Use CPU-only PyTorch to avoid CUDA disk space issues
    "torch==2.7.1+cpu",
    "pgmpy>=1.0.0",
    "feature-engine>=1.8.3",
    "python-sat>=1.8.dev17",
    "gpkit>=1.1.1",
    "mlxtend>=0.23.4",
    "stopit>=1.1.2",
    "divexplorer>=0.2.6",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "cython>=3.1.2",
    "pot>=0.9.5",
]

[project.optional-dependencies]
gpu = [
    "scikit-learn-intelex>=2025.5.0",
    "gurobipy>=12.0.2",
    # GPU-enabled PyTorch (only install when explicitly requested)
    "torch[cuda]>=2.0.0,<3.0.0",
]
local-packages = [
    "pfwrapper @ file:///workspace/ClearBias/methods/subgroup/fair_naive_bayes/pattern_finder",
]
dev = [
    "pfwrapper @ file:///workspace/ClearBias/methods/subgroup/fair_naive_bayes/pattern_finder",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't include any packages - this is just a dependency management project
packages = []

# UV-specific configuration to use CPU-only PyTorch by default
[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]